--- a/lista.css
+++ b/lista.css
@@ -13,3 +13,16 @@
     width: 25px;
   
   }
+  .titulo_intermedio{
+    font-size: 15px;
+    font-family:Arial, Helvetica, sans-serif;
+  }
+  .Comentario{
+    display: flex;
+    gap: 50px;
+  }
+  .Comentario img{
+
+    width: 50px;
+    border-radius: 50px;
+  }
